# even-boffin

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.msys2.sh  build.ubuntu.sh  even-boffin.pro  readme.txt
etc/: even-boffin.ini  even-boffin.web.ini
include/: NodeNetwork.hxx
lib/: deployqtapp.sh
prerequisites/: .gitignore  CMakeLists.txt
prerequisites/even-cpp/: build.msys2.sh
src/: BoffinApp.cxx  Network.cxx  Node.cxx  main.cpp
www/css/: boffin.css
